# nori

./: .gitignore  CMakeLists.txt
include/nori/: common.h
scenes/pa0/: 01.xml
src/: main.cpp
